Updated my intro in childhood section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h2 style="font-family: Georgia; font-size: 25px; text-align: center; color: #2C3639;">Childhood</h2>
     <p>
-        <sup>1</sup>My childhood began in a quiet household but always filled with activity and familiar routines. 
+        <sup>1</sup>I am <b>Iñigo Agunod</b>, and my childhood began in a quiet household that was always filled with activity and familiar routines. 
         <sup>2</sup>I grew up in a family of six, with my mother, my father, my two older brothers, my twin brother, and me all sharing the same busy space. 
         <sup>3</sup>Our days were shaped by habits and rhythms that gave a sense of order to our lives. 
         <sup>4</sup>I learned early on that sharing and cooperation were essential when living with many siblings. 
