--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -12,12 +12,12 @@
     <!-- NAVBAR -->
     <nav class="navbar">
         <a href="../index.html">Home</a>
-        <a href="/biography/biography.html">Biography</a>
-        <a href="/blogs/blog1.html">Blog</a>
-        <a href="/skills/skills.html">Skills</a>
-        <a href="/projects/projects.html">Projects</a>
-        <a href="/education/education.html">Education</a>
-        <a href="/contact/contact.html">Contact</a>
+        <a href="../biography/biography.html">Biography</a>
+        <a href="blog1.html">Blog</a>
+        <a href="../skills/skills.html">Skills</a>
+        <a href="../projects/projects.html">Projects</a>
+        <a href="../education/education.html">Education</a>
+        <a href="../contact/contact.html">Contact</a>
     </nav>
 
     <!-- CONTENT WRAPPER -->
