change profile testing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Intro / Hero -->
         <section class="hero">
             <div class="hero-image">
-                <img src="images/Homepage/pfp.png" alt="Profile picture">
+                <img src="images/Homepage/pfp2.png" alt="Profile picture">
             </div>
 
             <div class="hero-text">
