--- a/contact/contact.html
+++ b/contact/contact.html
@@ -23,7 +23,7 @@
     <main class="home">
         <section class="hero">
             <div class="hero-image">
-                <img src="../images/profile.jpg" alt="Profile Image">
+                <img src="../images/Homepage/pfp.png" alt="Profile Image">
             </div>
             <div class="hero-text">
                 <h1>Get in Touch</h1>
@@ -36,14 +36,14 @@
             <p>If you’d like to connect, you can reach me through the following methods:</p>
 
             <ul>
-                <li><strong>Email:</strong> <a href="mailto:inigo@example.com">inigo@example.com</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+1234567890">+123 456 7890</a></li>
+                <li><strong>Email:</strong> <a href="mailto:agunod.inigojose@ue.edu.ph">agunod.inigojose@ue.edu.ph</a></li>
+                <li><strong>Phone:</strong> <a href="09695800894">09695800894</a></li>
                 <li><strong>Socials:</strong></li>
                 <div class="social-buttons">
-                    <a href="https://facebook.com/inigo" target="_blank" class="social-btn facebook">Facebook</a>
+                    <a href="https://www.facebook.com/inigo.agunod.2025" target="_blank" class="social-btn facebook">Facebook</a>
                     <a href="https://twitter.com/inigo" target="_blank" class="social-btn twitter">Twitter</a>
-                    <a href="https://linkedin.com/in/inigo" target="_blank" class="social-btn linkedin">LinkedIn</a>
-                    <a href="https://github.com/inigo" target="_blank" class="social-btn github">GitHub</a>
+                    <a href="https://www.linkedin.com/in/i%C3%B1igo-agunod-12448138b/" target="_blank" class="social-btn linkedin">LinkedIn</a>
+                    <a href="https://github.com/Inigo-hash" target="_blank" class="social-btn github">GitHub</a>
                 </div>
             </ul>
         </section>
