--- a/skills/skills.html
+++ b/skills/skills.html
@@ -13,6 +13,7 @@
         <a href="../index.html">Home</a>
         <a href="../biography/biography.html">Biography</a>
         <a href="../blogs/blog1.html">Blog</a>
+        <a href="../gallerydump/gallerydump.html">Gallery Dump</a>
         <a href="skills.html">Skills</a>
         <a href="../projects/projects.html">Projects</a>
         <a href="../education/education.html">Education</a>
