--- a/biography/biography.html
+++ b/biography/biography.html
@@ -14,6 +14,7 @@
         <a href="../index.html">Home</a>
         <a href="biography.html">Biography</a>
         <a href="../blogs/blog1.html">Blog</a>
+        <a href="../gallerydump/gallerydump.html">Gallery Dump</a>
         <a href="../skills/skills.html">Skills</a>
         <a href="../projects/projects.html">Projects</a>
         <a href="../education/education.html">Education</a>
