--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -14,6 +14,7 @@
         <a href="../index.html">Home</a>
         <a href="../biography/biography.html">Biography</a>
         <a href="blog1.html">Blog</a>
+        <a href="../gallerydump/gallerydump.html">Gallery Dump</a>
         <a href="../skills/skills.html">Skills</a>
         <a href="../projects/projects.html">Projects</a>
         <a href="../education/education.html">Education</a>
