--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Navigation bar -->
     <nav class="navbar">
-        <a href="index.html">Home</a>
         <a href="biography/biography.html">Biography</a>
         <a href="blogs/blog1.html">Blog</a>
+        <a href="gallerydump/gallerydump.html">Gallery Dump</a>
         <a href="skills/skills.html">Skills</a>
         <a href="projects/projects.html">Projects</a>
         <a href="education/education.html">Education</a>
