--- a/projects/projects.html
+++ b/projects/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="projects.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
         <a href="../index.html">Home</a>
         <a href="../biography/biography.html">Biography</a>
         <a href="../blogs/blog1.html">Blog</a>
+        <a href="../gallerydump/gallerydump.html">Gallery Dump</a>
         <a href="../skills/skills.html">Skills</a>
         <a href="projects.html">Projects</a>
         <a href="../education/education.html">Education</a>
