Added back to top feature on gallery dump

--- a/gallerydump/collegedump.html
+++ b/gallerydump/collegedump.html
@@ -21,70 +21,75 @@
     </nav>
 
     <!-- Gallery Container -->
-    <div class="gallery-container">
+    <div class="gallery-container" id="top">
         <h1 class="gallery-title">College Dump</h1>
         
         <a href="gallerydump.html" class="back-btn">← Back to Gallery</a>
 
         <div class="gallery-grid">
             <a href="#img1" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college1.jpg" alt="College photo 1">
+                <img src="../images/gallery dump/College Dump/college1.jpg" alt="College photo 1" title="K-mart">
             </a>
             <a href="#img2" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college2.jpg" alt="College photo 2">
+                <img src="../images/gallery dump/College Dump/college2.jpg" alt="College photo 2" title="UE Caloocan Campus">
             </a>
             <a href="#img3" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college3.jpg" alt="College photo 3">
+                <img src="../images/gallery dump/College Dump/college3.jpg" alt="College photo 3" title="Legarda Station">
             </a>
             <a href="#img4" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college4.jpg" alt="College photo 4">
+                <img src="../images/gallery dump/College Dump/college4.jpg" alt="College photo 4" title="Legarda Station">
             </a>
             <a href="#img5" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college5.jpg" alt="College photo 5">
+                <img src="../images/gallery dump/College Dump/college5.jpg" alt="College photo 5" title="Contemporary Arts Field Trip">
             </a>
             <a href="#img6" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college6.jpg" alt="College photo 6">
+                <img src="../images/gallery dump/College Dump/college6.jpg" alt="College photo 6" title="Contemporary Arts Field Trip">
             </a>
             <a href="#img7" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college7.jpg" alt="College photo 7">
+                <img src="../images/gallery dump/College Dump/college7.jpg" alt="College photo 7" title="Contemporary Arts Field Trip">
             </a>
             <a href="#img8" class="gallery-item">
-                <img src="../images/gallery dump/College Dump/college8.jpg" alt="College photo 8">
+                <img src="../images/gallery dump/College Dump/college8.jpg" alt="College photo 8" title="End of Semester Celebration">
             </a>
+        </div>
+
+        <!-- Back to Top Button -->
+        <div class="back-to-top-container">
+            <a href="#top" class="back-to-top">Back to Top</a>
         </div>
     </div>
 
     <!-- Lightbox Modals -->
     <div id="img1" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college1.jpg" alt="College photo 1">
     </div>
     <div id="img2" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college2.jpg" alt="College photo 2">
     </div>
     <div id="img3" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college3.jpg" alt="College photo 3">
     </div>
     <div id="img4" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college4.jpg" alt="College photo 4">
     </div>
     <div id="img5" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college5.jpg" alt="College photo 5">
     </div>
     <div id="img6" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college6.jpg" alt="College photo 6">
     </div>
     <div id="img7" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college7.jpg" alt="College photo 7">
     </div>
     <div id="img8" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/College Dump/college8.jpg" alt="College photo 8">
     </div>
 
