--- a/gallerydump/rabbit.html
+++ b/gallerydump/rabbit.html
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- Gallery Container -->
-    <div class="gallery-container">
+    <div class="gallery-container" id="top">
         <h1 class="gallery-title">Rigby & Chubs Dump 🐰</h1>
         
         <a href="gallerydump.html" class="back-btn">← Back to Gallery</a>
@@ -31,22 +31,22 @@
             <h2 class="section-label">Rigby</h2>
             <div class="gallery-grid">
                 <a href="#img1" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby1.jpg" alt="Rigby photo 1">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby1.jpg" alt="Rigby photo 1" title="Rigby Eating a Flower">
                 </a>
                 <a href="#img2" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby2.jpg" alt="Rigby photo 2">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby2.jpg" alt="Rigby photo 2" title="Rigby Eating a Flower">
                 </a>
                 <a href="#img3" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby3.jpg" alt="Rigby photo 3">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby3.jpg" alt="Rigby photo 3" title="Rigby Sleeping">
                 </a>
                 <a href="#img4" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby4.jpg" alt="Rigby photo 4">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby4.jpg" alt="Rigby photo 4" title="Rigby Resting">
                 </a>
                 <a href="#img5" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby5.jpeg" alt="Rigby photo 5">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby5.jpeg" alt="Rigby photo 5" title="Rigby Closeup Photo">
                 </a>
                 <a href="#img6" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby6.jpeg" alt="Rigby photo 6">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/rigby6.jpeg" alt="Rigby photo 6" title="Rigby Eating Leaves">
                 </a>
             </div>
         </div>
@@ -56,60 +56,66 @@
             <h2 class="section-label">Chubs</h2>
             <div class="gallery-grid">
                 <a href="#img7" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs1.jpg" alt="Chubs photo 1">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs1.jpg" alt="Chubs photo 1" title="Chubs Resting">
                 </a>
                 <a href="#img8" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs2.jpg" alt="Chubs photo 2">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs2.jpg" alt="Chubs photo 2" title="Chubs Resting">
                 </a>
                 <a href="#img9" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs3.jpg" alt="Chubs photo 3">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs3.jpg" alt="Chubs photo 3" title="Chubs Eating">
                 </a>
                 <a href="#img10" class="gallery-item">
-                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs4.jpg" alt="Chubs photo 4">
+                    <img src="../images/gallery dump/Rigby&Chubs Dump/chubs4.jpg" alt="Chubs photo 4" title="Chubs Sleeping">
                 </a>
             </div>
         </div>
+
+        <!-- Back to Top Button -->
+        <div class="back-to-top-container">
+            <a href="#top" class="back-to-top">Back to Top</a>
+        </div>
+
     </div>
 
     <!-- Lightbox Modals -->
     <div id="img1" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby1.jpg" alt="Rigby photo 1">
     </div>
     <div id="img2" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby2.jpg" alt="Rigby photo 2">
     </div>
     <div id="img3" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby3.jpg" alt="Rigby photo 3">
     </div>
     <div id="img4" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby4.jpg" alt="Rigby photo 4">
     </div>
     <div id="img5" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby5.jpeg" alt="Rigby photo 5">
     </div>
     <div id="img6" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/rigby6.jpeg" alt="Rigby photo 6">
     </div>
     <div id="img7" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/chubs1.jpg" alt="Chubs photo 1">
     </div>
     <div id="img8" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/chubs2.jpg" alt="Chubs photo 2">
     </div>
     <div id="img9" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/chubs3.jpg" alt="Chubs photo 3">
     </div>
     <div id="img10" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Rigby&Chubs Dump/chubs4.jpg" alt="Chubs photo 4">
     </div>
 
