--- a/gallerydump/sagada.html
+++ b/gallerydump/sagada.html
@@ -21,91 +21,97 @@
     </nav>
 
     <!-- Gallery Container -->
-    <div class="gallery-container">
+    <div class="gallery-container" id="top">
         <h1 class="gallery-title">Sagada Dump ⛰️</h1>
         
         <a href="gallerydump.html" class="back-btn">← Back to Gallery</a>
 
         <div class="gallery-grid">
             <a href="#img1" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada1.jpg" alt="Sagada photo 1">
+                <img src="../images/gallery dump/Sagada Dump/sagada1.jpg" alt="Sagada photo 1" title="Sagada Paytokan Walk">
             </a>
             <a href="#img2" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada2.jpg" alt="Sagada photo 2">
+                <img src="../images/gallery dump/Sagada Dump/sagada2.jpg" alt="Sagada photo 2" title="Sagada Paytokan Walk">
             </a>
             <a href="#img3" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada3.jpg" alt="Sagada photo 3">
+                <img src="../images/gallery dump/Sagada Dump/sagada3.jpg" alt="Sagada photo 3" title="Sagada Paytokan Walk">
             </a>
             <a href="#img4" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada4.jpg" alt="Sagada photo 4">
+                <img src="../images/gallery dump/Sagada Dump/sagada4.jpg" alt="Sagada photo 4" title="Descending From the Top of the Malboro Hills">
             </a>
             <a href="#img5" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada5.jpg" alt="Sagada photo 5">
+                <img src="../images/gallery dump/Sagada Dump/sagada5.jpg" alt="Sagada photo 5" title="Descending From the Top of the Malboro Hills">
             </a>
             <a href="#img6" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada6.jpg" alt="Sagada photo 6">
+                <img src="../images/gallery dump/Sagada Dump/sagada6.jpg" alt="Sagada photo 6" title="Descending From the Top of the Malboro Hills">
             </a>
             <a href="#img7" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada7.jpg" alt="Sagada photo 7">
+                <img src="../images/gallery dump/Sagada Dump/sagada7.jpg" alt="Sagada photo 7" title="Sumaguing Cave">
             </a>
             <a href="#img8" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada8.jpg" alt="Sagada photo 8">
+                <img src="../images/gallery dump/Sagada Dump/sagada8.jpg" alt="Sagada photo 8" title="Mt. Ampacao Sky Photo">
             </a>
             <a href="#img9" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada9.jpg" alt="Sagada photo 9">
+                <img src="../images/gallery dump/Sagada Dump/sagada9.jpg" alt="Sagada photo 9" title="Mt. Ampacao Sky Photo">
             </a>
             <a href="#img10" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada10.jpg" alt="Sagada photo 10">
+                <img src="../images/gallery dump/Sagada Dump/sagada10.jpg" alt="Sagada photo 10" title="Mt. Ampacao Sky Photo">
             </a>
             <a href="#img11" class="gallery-item">
-                <img src="../images/gallery dump/Sagada Dump/sagada11.jpg" alt="Sagada photo 11">
+                <img src="../images/gallery dump/Sagada Dump/sagada11.jpg" alt="Sagada photo 11" title="Mt. Ampacao Sky Photo">
             </a>
+        </div>
+
+        <!-- Back to Top Button -->
+        <div class="back-to-top-container">
+            <a href="#top" class="back-to-top">Back to Top</a>
         </div>
     </div>
 
+
     <!-- Lightbox Modals -->
     <div id="img1" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada1.jpg" alt="Sagada photo 1">
     </div>
     <div id="img2" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada2.jpg" alt="Sagada photo 2">
     </div>
     <div id="img3" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada3.jpg" alt="Sagada photo 3">
     </div>
     <div id="img4" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada4.jpg" alt="Sagada photo 4">
     </div>
     <div id="img5" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada5.jpg" alt="Sagada photo 5">
     </div>
     <div id="img6" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada6.jpg" alt="Sagada photo 6">
     </div>
     <div id="img7" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada7.jpg" alt="Sagada photo 7">
     </div>
     <div id="img8" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada8.jpg" alt="Sagada photo 8">
     </div>
     <div id="img9" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada9.jpg" alt="Sagada photo 9">
     </div>
     <div id="img10" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada10.jpg" alt="Sagada photo 10">
     </div>
     <div id="img11" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Sagada Dump/sagada11.jpg" alt="Sagada photo 11">
     </div>
 
