--- a/gallerydump/tanay.html
+++ b/gallerydump/tanay.html
@@ -21,56 +21,61 @@
     </nav>
 
     <!-- Gallery Container -->
-    <div class="gallery-container">
+    <div class="gallery-container" id="top">
         <h1 class="gallery-title">Tanay Dump 🏖️</h1>
         
         <a href="gallerydump.html" class="back-btn">← Back to Gallery</a>
 
         <div class="gallery-grid">
             <a href="#img1" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay1.jpg" alt="Tanay photo 1">
+                <img src="../images/gallery dump/Tanay Dump/tanay1.jpg" alt="Tanay photo 1" title="Sunset">
             </a>
             <a href="#img2" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay2.jpg" alt="Tanay photo 2">
+                <img src="../images/gallery dump/Tanay Dump/tanay2.jpg" alt="Tanay photo 2" title="Walking along the road">
             </a>
             <a href="#img3" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay3.jpg" alt="Tanay photo 3">
+                <img src="../images/gallery dump/Tanay Dump/tanay3.jpg" alt="Tanay photo 3" title="Parked beside the road">
             </a>
             <a href="#img4" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay4.jpg" alt="Tanay photo 4">
+                <img src="../images/gallery dump/Tanay Dump/tanay4.jpg" alt="Tanay photo 4" title="Chilling on the trunk">
             </a>
             <a href="#img5" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay5.jpg" alt="Tanay photo 5">
+                <img src="../images/gallery dump/Tanay Dump/tanay5.jpg" alt="Tanay photo 5" title="Creamy Pesto">
             </a>
             <a href="#img6" class="gallery-item">
-                <img src="../images/gallery dump/Tanay Dump/tanay6.jpg" alt="Tanay photo 6">
+                <img src="../images/gallery dump/Tanay Dump/tanay6.jpg" alt="Tanay photo 6" title="Eating in Kape Natividad">
             </a>
+        </div>
+        <!-- Back to Top Button -->
+        <div class="back-to-top-container">
+            <a href="#top" class="back-to-top">Back to Top</a>
         </div>
     </div>
 
+
     <!-- Lightbox Modals -->
     <div id="img1" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay1.jpg" alt="Tanay photo 1">
     </div>
     <div id="img2" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay2.jpg" alt="Tanay photo 2">
     </div>
     <div id="img3" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay3.jpg" alt="Tanay photo 3">
     </div>
     <div id="img4" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay4.jpg" alt="Tanay photo 4">
     </div>
     <div id="img5" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay5.jpg" alt="Tanay photo 5">
     </div>
     <div id="img6" class="lightbox">
-        <a href="#_" class="lightbox-close">&times;</a>
+        <a href="#" class="lightbox-close">&times;</a>
         <img src="../images/gallery dump/Tanay Dump/tanay6.jpg" alt="Tanay photo 6">
     </div>
 
